-------------------------------------------------------------------------------
Changes in version 1.020

- Fixed a couple of length counting bugs in the fmt number code.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.019

- Broke the iobuf includes into smaller parts.

- Added low-level fcntl wrapper functions: fcntl_{fd,fl}_{off,on}

- Added cloexec_{off,on} functions to manipulate the close-on-exec flag.

- Selfpipes now close-on-exec to prevent the pipe from being exported to
  child processes.

- Changed the error in ibuf_getnetstring from EPROTO to EPROTOTYPE to
  fix compile errors on *BSD systems.  Thanks Ville Walveranta.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.018

- Added missing crypto/surf.h and unix/selfpipe.h headers to insthier.

- Added sysdep and emulator function for mkfifo.

- Added sysdep check for the "named pipe bug": polling a named pipe
  without a writer unconditionally succeeds.

- Fixed bug in ibuf_getu: didn't subtract ASCII '0' offset from digits.

- Added environment string manipulation functions.

- Added named pipe trigger functions.

- Added str_getnetstring function.

- Added ghash_remove function.

- Added ghashiter functions, for iteration over ghash tables.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.017

- Added SURF (Simple Unpredictable Random Function) from the algorithm
  described in http://cr.yp.to/papers/surf.ps

- Added str_catns, str_copyns, and obuf_putns functions that take a