@@ -34,6 +34,7 @@ obuf_put4s.o
 obuf_put5s.o
 obuf_put6s.o
 obuf_put7s.o
+obuf_putf.o
 obuf_putns.o
 obuf_putc.o
 obuf_putnetstring.o
