@@ -80,6 +80,7 @@ int obuf_put6s(obuf* out, const char* s1, const char* s2, const char* s3,
 int obuf_put7s(obuf* out, const char* s1, const char* s2, const char* s3,
 	       const char* s4, const char* s5, const char* s6, const char* s7);
 int obuf_putns(obuf* out, unsigned int count, ...);
+int obuf_putf(obuf* out, const char* format, ...);
 /** Write a dynamic string to the \c iobuf */
 #define obuf_putstr(out,str) obuf_write(out,(str)->s,(str)->len)
 int obuf_putsflush(obuf* out, const char* s);
