@@ -3,6 +3,9 @@ Changes in version 1.020
 
 - Fixed a couple of length counting bugs in the fmt number code.
 
+- Added multiple-item formatting functions fmt_multi (similar to printf,
+  but safer), fmt_multiv, obuf_putf, str_catf, and str_copyf.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
